[project]
name = "mint_scape"
version = "0.1.0"
description = ""
authors = [
    {name = "rumi",email = "pouya.zm83@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama (>=0.4.6,<0.5.0)",
    "rich (>=14.2.0,<15.0.0)",
    "pytest (>=9.0.1,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
